On branch master

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="github.com/kareem24" target="_blank">kareem roqib</a>.
+    Coded by <a href="https://github.com/kareem24" target="_blank">kareem roqib</a>.
   </div>
   <script src="app.js"></script>
 </body>
