On branch master

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
               <span class="price-discount">
 
-                <p class="discount">$125.00 </p> <span class="percent">50%</span>
+                <span class="discount">$125.00 </span> <span class="percent">50%</span>
               </span>
               <p class="price">$250.00</p>
               <div class="cart-value">
