On branch master

--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
   0
   Add to cart -->
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/kareem24" target="_blank">kareem roqib</a>.
-  </div>
+  </footer>
   <script src="app.js"></script>
 </body>
 </html>
